updated the ppt

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             duration: 60 * 30, // The duration of the class (in seconds).
             startTime: new Date().getTime(),
             courseWareList: [{
-                resourceName: 'youtube - RTE2022',
+                resourceName: 'Youtube Demo - RTE2022',
                 resourceUuid: `${Math.floor(Math.random() * 1000) + Date.now()}`,
                 ext: 'alf',
                 url: 'http://youtube.com/watch?v=p3Bt6rAYIsQ',
@@ -75,10 +75,10 @@
                 initOpen: false,
             },
             {
-                resourceName: 'PPT',
+                resourceName: 'PPT Demo',
                 resourceUuid: `${Math.floor(Math.random() * 1000) + Date.now()}`,
                 ext: 'alf',
-                url: 'https://docs.google.com/presentation/d/e/2PACX-1vS96huhUtXdI9W_38L0lyn-ymKpbZy9uGm0fVAeQtcTbyBimSXjMLwsUMg6wpxYG9lS_4xiI-bxrJAd/embed?start=true&loop=false&delayms=3000',
+                url: 'https://docs.google.com/presentation/d/e/2PACX-1vQp1jZ06PPAeKLxp-Vsspf66p_tOkrnImwvoHfI3YvJ2aC5KA6S6iUs5w4k0GL-gb0RmPbK4xjVMbgU/embed?start=false&loop=false&delayms=3000',
                 size: 0,
                 updateTime: Date.now(),
                 initOpen: false,
