--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
 
         // Launch Flexible Classroom
         AgoraEduSDK.launch(document.querySelector('#root'), {
-            userUuid: 'tarun',
+            userUuid: 'tarun-rathore1997',
             userName: 'tarun rathore',
-            roomUuid: 'roomUuid123',
+            roomUuid: 'roomUuid12345',
             roleType: 1, // Role type: 1 for teachers, 2 for students.
             roomType: 4, // Room type: 0 for a one-to-one classroom, 2 for a lecture hall (a common lecture hall or a vocational lecture hall depending on room sub-type), 4 for a small classroom.
             roomSubType: 0, // Room sub-type. The default value is 0. To set a vocational lecture hall, set roomType as 2 and roomSubType as 1.
-            roomName: 'roomNameHere',
+            roomName: 'classroom-name',
             pretest: true, // Whether to enable the pre-class device test.
-            rtmToken: '006b026eace716a42de90c47ec7ba3a734dIAC7Y28dpG8PBMKjpOMeJhAa/DvRxYDiMY2hJYFT0SNCzKZc3eYAAAAAEAAC1h+s1YpgZQEA6ANlR19l', // In a test environment, you can use a temporary token; in a production or security environment, Agora strongly recommends that you use a server-generated token.
+            rtmToken: '006b026eace716a42de90c47ec7ba3a734dIADDXzvBuzCXDC+YKpwEi2nUs4EtFkjoKqfpoo/lZS+UcMQSH3IAAAAAEABbu7b7s3pkZQEA6AOzwGll', // In a test environment, you can use a temporary token; in a production or security environment, Agora strongly recommends that you use a server-generated token.
             language: 'en', // The language on the classroom UI: zh for Chinese and en for English.
-            duration: 60 * 30, // The duration of the class (in seconds).
+            // duration: 60 * 30, // The duration of the class (in seconds).
             startTime: new Date().getTime(),
             courseWareList: [{
                 resourceName: 'Youtube Demo - RTE2022',
@@ -78,7 +78,7 @@
                 resourceName: 'PPT Demo',
                 resourceUuid: `${Math.floor(Math.random() * 1000) + Date.now()}`,
                 ext: 'alf',
-                url: 'https://docs.google.com/presentation/d/e/2PACX-1vQp1jZ06PPAeKLxp-Vsspf66p_tOkrnImwvoHfI3YvJ2aC5KA6S6iUs5w4k0GL-gb0RmPbK4xjVMbgU/embed?start=false&loop=false&delayms=3000',
+                url: 'https://docs.google.com/presentation/d/e/2PACX-1vQOrfCccr2xIkcRthaYpuDZeUiLnggPqxw63EvYj6vHqk03pYG4BNi64W5o-HLB312MYM0gNq23LCz5/embed?start=true&loop=true&delayms=3000',
                 size: 0,
                 updateTime: Date.now(),
                 initOpen: false,
