--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 
         // Launch Flexible Classroom
         AgoraEduSDK.launch(document.querySelector('#root'), {
-            userUuid: 'tarun-rathore1997',
+            userUuid: 'agora-demo-user',
             userName: 'tarun rathore',
-            roomUuid: 'roomUuid12345',
+            roomUuid: 'roomUuid-demo',
             roleType: 1, // Role type: 1 for teachers, 2 for students.
             roomType: 4, // Room type: 0 for a one-to-one classroom, 2 for a lecture hall (a common lecture hall or a vocational lecture hall depending on room sub-type), 4 for a small classroom.
             roomSubType: 0, // Room sub-type. The default value is 0. To set a vocational lecture hall, set roomType as 2 and roomSubType as 1.
             roomName: 'classroom-name',
             pretest: true, // Whether to enable the pre-class device test.
-            rtmToken: '006b026eace716a42de90c47ec7ba3a734dIADDXzvBuzCXDC+YKpwEi2nUs4EtFkjoKqfpoo/lZS+UcMQSH3IAAAAAEABbu7b7s3pkZQEA6AOzwGll', // In a test environment, you can use a temporary token; in a production or security environment, Agora strongly recommends that you use a server-generated token.
+            rtmToken: '006b026eace716a42de90c47ec7ba3a734dIAA2sIfdpZXIjYJi9ujiXKv/n1Tgq9mgahY6cOVJ572an6BlzBAAAAAAEAAPW3Kkt8xlZQEA6AO3Emtl', // In a test environment, you can use a temporary token; in a production or security environment, Agora strongly recommends that you use a server-generated token.
             language: 'en', // The language on the classroom UI: zh for Chinese and en for English.
             // duration: 60 * 30, // The duration of the class (in seconds).
             startTime: new Date().getTime(),
@@ -88,13 +88,13 @@
             webrtcExtensionBaseUrl: 'https://solutions-apaas.agora.io/static', //WebRTC Plug-in deployment address
             uiMode: 'light', // The theme of the classroom UI: light for the light mode, dark for the dark mode.
             widgets: {
-                popupQuiz: AgoraSelector,
-                countdownTimer: AgoraCountdown,
-                easemobIM: AgoraHXChatWidget,
-                mediaPlayer: FcrStreamMediaPlayerWidget,
+                // popupQuiz: AgoraSelector,
+                // countdownTimer: AgoraCountdown,
+                // easemobIM: AgoraHXChatWidget,
+                // mediaPlayer: FcrStreamMediaPlayerWidget,
                 poll: AgoraPolling,
-                watermark: FcrWatermarkWidget,
-                webView: FcrWebviewWidget,
+                // watermark: FcrWatermarkWidget,
+                // webView: FcrWebviewWidget,
                 netlessBoard: FcrBoardWidget
             },
             listener: (evt, args) => {
